--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,20 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit-icons.min.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <script defer src="./script.js"></script>
+
 </head>
 <body>
     
     <div class="uk-container home-container">
         <div class="content">
-            <input type="text" class="uk-input" placeholder="Enter URL here">
-            <button class="uk-button uk-button-primary btnShort">Shorten</button>
+            <input id="inpLink" type="text" class="uk-input" placeholder="Enter URL here">
+            <button class="uk-button uk-button-primary btnShort" id="btnShort">Shorten</button>
             <div class="uk-inline">
                 <a class="uk-form-icon uk-form-icon-flip" href="#" uk-icon="icon: link"></a>
-                <input class="uk-input" type="text" disabled>
+                <input class="uk-input" type="text" disabled id="inpDisplay">
             </div>
         </div>
     </div>
