added: copy to clipboard

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             <input id="inpLink" type="text" class="uk-input" placeholder="Enter URL here">
             <button class="uk-button uk-button-primary btnShort" id="btnShort">Shorten</button>
             <div class="uk-inline">
-                <a class="uk-form-icon uk-form-icon-flip" href="#" uk-icon="icon: link"></a>
+                <button id="btnCopy" class="uk-form-icon uk-form-icon-flip" href="#" uk-icon="icon: link"></button>
                 <input class="uk-input" type="text" disabled id="inpDisplay">
             </div>
         </div>
